--- a/.github/workflows/publish-node.yml
+++ b/.github/workflows/publish-node.yml
@@ -22,4 +22,4 @@ jobs:
       - run: npm publish
         if: github.event_name == 'release'
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_SECRET }}
