--- a/.github/workflows/publish-node.yml
+++ b/.github/workflows/publish-node.yml
@@ -19,9 +19,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          registry-url: 'https://registry.npmjs.org'
       - run: npm ci
       - run: npm test
       - run: npm run build
-      - run: npm publish
+      - run: npm publish --provenance --access public
         if: github.event_name == 'release'
