--- a/.github/workflows/publish-node.yml
+++ b/.github/workflows/publish-node.yml
@@ -2,10 +2,8 @@ name: Publish Node.js SDK
 
 on:
   push:
-    branches: [ "main" ]
-  release:
-    types: [published]
-  workflow_dispatch:
+    tags:
+      - 'v*'
 
 permissions:
   contents: read
@@ -18,10 +16,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: '24'
+          registry-url: 'https://registry.npmjs.org'
       - run: npm ci
       - run: npm test
       - run: npm run build
-      - run: npm config list
-      - run: npm publish --provenance --access public --verbose
-        if: github.event_name == 'release'
+      - run: npm publish --provenance --access public
